--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "framer-motion": "^12.23.25",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.555.0",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0"
